# AIModule6

./: .gitignore  Code10.py  Code11.py  Code12.py  Code13.py  Code14.py  Code15.py  Code16.py  Code17.ipynb  Code18.ipynb  Code19.ipynb  Code2.py  Code20.ipynb  Code21.ipynb  Code22.ipynb  Code23.ipynb  Code24.ipynb  Code3.py  Code4.py  Code5.py  Code7.py  Code8.py  Code9.py  json_schema.json  main.py  pyproject.toml
